Prepared for nginx.

--- a/viber-bot.ini
+++ b/viber-bot.ini
@@ -1,10 +1,4 @@
-[Flask]
-listen address = 0.0.0.0
-listen port = 8888
-private key = privkey.pem
-certificate = cert.pem
-
-[Viber bot]
+[Viber]
 authentication token =
 name =
 avatar = https://hostname/avatar.jpg
