Moved files around a bit.

--- a/command_bot/viber-bot.ini
+++ b/command_bot/viber-bot.ini
@@ -2,7 +2,7 @@
 authentication token =
 name =
 avatar = https://hostname/avatar.jpg
-webhook = https://hostname:8888
+webhook = https://hostname/viber-bot
 notify user id =
 trusted user ids =
 
