--- a/command_bot/viber-bot.ini
+++ b/command_bot/viber-bot.ini
@@ -1,10 +1,10 @@
 [Viber]
-authentication token =
+authentication_token =
 name =
 avatar = https://hostname/avatar.jpg
 webhook = https://hostname/viber-bot
-notify user id =
-trusted user ids =
+notify_user_id =
+trusted_user_ids =
 
 [Command date]
 execute = date
@@ -44,5 +44,5 @@ help = Show server uptime.
 
 [Command webcam]
 execute = webcam.sh
-output format = json
+output_format = json
 help = Take picture using the webcam.
