Added some utility scripts.

--- a/command_bot/bot.ini
+++ b/command_bot/bot.ini
@@ -1,6 +1,6 @@
 [uwsgi]
-chdir = /home/tkl/GitHub/viber
-virtualenv = /home/tkl/.virtualenvs/viber-bot
+chdir = /usr/local/viber
+virtualenv = /usr/local/viber/virtualenv
 master = true
 processes = 5
 enable-threads = true
