Fixed script paths.

--- a/command_bot/viber-bot.ini
+++ b/command_bot/viber-bot.ini
@@ -1,10 +1,15 @@
 [Viber]
-authentication_token =
-name =
+authentication_token = your-authentication-token
+name = bot-name
 avatar = https://hostname/avatar.jpg
 webhook = https://hostname/viber-bot
-notify_user_id =
-trusted_user_ids =
+notify_user_id = admin-user-id
+trusted_user_ids = admin-user-id
+
+[Command avatar]
+execute = echo '{"text": "Bot avatar", "media": "https://hostname/avatar.jpg"}'
+output_format = json
+help = Show avatar.
 
 [Command date]
 execute = date
