Added support for registering and un-registering of the bot.

--- a/command_bot/viber-command-bot.ini
+++ b/command_bot/viber-command-bot.ini
@@ -1,3 +1,7 @@
+#
+# uWSGI configuration for Viber command bot.
+#
+
 [uwsgi]
 chdir = /usr/local/viber
 virtualenv = /usr/local/viber/virtualenv
@@ -9,7 +13,7 @@ chmod-socket = 660
 vacuum = true
 die-on-term = true
 callable = app
-mount = /viber-bot=command_bot/bot.py
+mount = /viber-bot=command_bot/app.py
 manage-script-name = true
 uid = viber
 gid = nginx
