--- a/command_bot/viber-command-bot.service
+++ b/command_bot/viber-command-bot.service
@@ -6,8 +6,8 @@ After=network.target
 User=viber
 Group=nginx
 WorkingDirectory=/usr/local/viber
-Environment="PATH=/usr/local/viber/bin"
-ExecStart=/usr/local/viber/bin/uwsgi --ini command_bot/bot.ini
+Environment="PATH=/usr/local/viber/bin:/usr/local/bin:/usr/bin:/bin"
+ExecStart=/usr/local/viber/bin/uwsgi --ini command_bot/viber-command-bot.ini
 
 [Install]
 WantedBy=multi-user.target
