Refactored the directory structure for more bots.

--- a/bot/command/systemd.service
+++ b/bot/command/systemd.service
@@ -6,8 +6,9 @@ After=network.target
 User=viber
 Group=nginx
 WorkingDirectory=/usr/local/viber
-Environment="PATH=/usr/local/viber/bin:/usr/local/bin:/usr/bin:/bin"
-ExecStart=/usr/local/viber/bin/uwsgi --ini command_bot/viber-command-bot.ini
+Environment="PATH=/usr/local/bin:/usr/bin:/bin:"
+Environment="VIBER_CONF=/etc/viber/bot-command.conf"
+ExecStart=/usr/local/viber/venv/bin/uwsgi --ini bot/command/uwsgi.ini
 
 [Install]
 WantedBy=multi-user.target
