--- a/bot/command/uwsgi.ini
+++ b/bot/command/uwsgi.ini
@@ -4,16 +4,16 @@
 
 [uwsgi]
 chdir = /usr/local/viber
-virtualenv = /usr/local/viber/virtualenv
+virtualenv = /usr/local/viber/venv
 master = true
 processes = 5
 enable-threads = true
-socket = /var/run/viber/bot.sock
+socket = /var/run/viber/bot-command.sock
 chmod-socket = 660
 vacuum = true
 die-on-term = true
 callable = app
-mount = /viber-bot=command_bot/app.py
+mount = /viber/bot/command=bot/command/bot.py
 manage-script-name = true
 uid = viber
 gid = nginx
