Changed virtualenv creation a bit.

--- a/bot/command/uwsgi.ini
+++ b/bot/command/uwsgi.ini
@@ -4,7 +4,7 @@
 
 [uwsgi]
 chdir = /usr/local/viber
-virtualenv = /usr/local/viber/venv
+virtualenv = /usr/local/viber/.virtualenv
 master = true
 processes = 5
 enable-threads = true
