Moved files around a bit.

--- a/bots/command/bot.conf
+++ b/bots/command/bot.conf
@@ -2,7 +2,7 @@
 authentication_token = your-authentication-token
 name = bot-name
 avatar = https://hostname/avatar.jpg
-webhook = https://hostname/viber-bot
+webhook = https://hostname/viber/bot
 notify_user_id = admin-user-id
 trusted_user_ids = admin-user-id
 
