Refactored for setup.py.

--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -3,8 +3,6 @@
 #
 
 [uwsgi]
-chdir = /usr/local/viber
-virtualenv = /usr/local/viber/.virtualenv
 master = true
 processes = 5
 enable-threads = true
@@ -13,7 +11,7 @@ chmod-socket = 660
 vacuum = true
 die-on-term = true
 callable = app
-mount = /viber/bot/command=vibercommandbot/flask/application.py
+mount = /viber/bot/command=vibercommandbot.flask.application:app
 manage-script-name = true
 uid = viber
 gid = nginx
