--- a/config/systemd.service
+++ b/config/systemd.service
@@ -5,10 +5,9 @@ After=network.target
 [Service]
 User=viber
 Group=nginx
-WorkingDirectory=/usr/local/viber
 Environment="PATH=/usr/local/bin:/usr/bin:/bin:"
 Environment="VIBER_CONF=/etc/viber/bot-command.conf"
-ExecStart=/usr/local/viber/.virtualenv/bin/uwsgi --ini config/uwsgi.ini
+ExecStart=/usr/local/bin/uwsgi --ini /etc/viber/uwsgi.ini
 
 [Install]
 WantedBy=multi-user.target
