Changed documentation a bit (still WIP).

--- a/config/bot.conf
+++ b/config/bot.conf
@@ -1,13 +1,13 @@
 [Viber]
-authentication_token = your-authentication-token
-name = bot-name
-avatar = https://hostname/avatar.jpg
-webhook = https://hostname/viber/bot
-notify_user_id = admin-user-id
-trusted_user_ids = admin-user-id
+authentication_token = viber-public-account-authentication-token
+name = viber-command-bot-name
+avatar = https://example.com/avatar.jpg
+webhook = https://example.com/viber-command-bot
+notify_user_id = viber-public-account-admin-user-id
+trusted_user_ids = viber-public-account-admin-user-id
 
 [Command avatar]
-execute = echo '{"text": "Bot avatar", "media": "https://hostname/avatar.jpg"}'
+execute = echo '{"text": "Bot avatar", "media": "https://example.com/avatar.jpg"}'
 output_format = json
 help = Show avatar.
 
