--- a/config/viber-command-bot.service
+++ b/config/viber-command-bot.service
@@ -6,8 +6,8 @@ After=network.target
 User=viber
 Group=nginx
 Environment="PATH=/usr/local/bin:/usr/bin:/bin:"
-Environment="VIBER_CONF=/etc/viber/bot.conf"
-ExecStart=/usr/local/bin/uwsgi --ini /etc/viber/uwsgi.ini
+Environment="VIBER_CONF=/etc/viber/viber-command-bot.conf"
+ExecStart=/usr/local/bin/uwsgi --ini /etc/viber/viber-command-bot.ini
 
 [Install]
 WantedBy=multi-user.target
