Added comments to config files.

--- a/config/viber-command-bot.conf
+++ b/config/viber-command-bot.conf
@@ -1,3 +1,7 @@
+#
+# Viber Command Bot - bot configuration file
+#
+
 [Viber]
 authentication_token = viber-public-account-authentication-token
 name = viber-command-bot-name
