Documented configuration file.
Also:

* Commands in help text are now sorted.
* Fixed some error handling for commands and configuration.

--- a/config/viber-command-bot.conf
+++ b/config/viber-command-bot.conf
@@ -1,6 +1,31 @@
 #
 # Viber Command Bot - bot configuration file
 #
+# Configuration block "Viber" is mandatory. It is used for configuring the
+# Viber bot API:
+#
+#   https://developers.viber.com/docs/api/python-bot-api/
+#
+# The configuration options are:
+#
+# authentication_token  - authentication token for the public Viber bot account
+# name                  - bot name shown in the message
+# avatar                - image URL for bot avatar
+# webhook               - webhook URL of the bot
+# notify_user_id        - user id who receives notifications from the bot
+# trusted_user_ids      - list of user ids that are allowed to send messages
+#
+# Commands for the bot are specified using configuration blocks with sections
+# in a format "Command name". "name" is the command received from the client as
+# "/name". Each command can have the following options:
+#
+# execute               - command to be executed by the bot through shell;
+#                         as a security measure, bot is not able to use any
+#                         information received from the user while executing
+#                         the command
+# output_format         - output format of the command: text (default), json
+# help                  - text to be shown in "/help" command
+#
 
 [Viber]
 authentication_token = viber-public-account-authentication-token
