Added support to log to a file and set log level in bot configuration.

--- a/config/viber-command-bot.conf
+++ b/config/viber-command-bot.conf
@@ -15,6 +15,13 @@
 # notify_user_id        - user id who receives notifications from the bot
 # trusted_user_ids      - list of user ids that are allowed to send messages
 #
+# Configuration block "Logging" specifies logging options:
+#
+# level                 - log level (CRITICAL, ERROR, WARNING, INFO, DEBUG);
+#                         default is INFO
+# syslog                - use syslog (True, False); default is True
+# file                  - log to file; default is no file
+#
 # Commands for the bot are specified using configuration blocks with sections
 # in a format "Command name". "name" is the command received from the client as
 # "/name". Each command can have the following options:
@@ -34,6 +41,10 @@ avatar = https://example.com/avatar.jpg
 webhook = https://example.com/viber-command-bot
 notify_user_id = viber-public-account-admin-user-id
 trusted_user_ids = viber-public-account-admin-user-id
+
+[Logger]
+level = INFO
+syslog = True
 
 [Command avatar]
 execute = echo '{"text": "Bot avatar", "media": "https://example.com/avatar.jpg"}'
