Moved webhook registering away from flask application.
Also,

* Added some documentation.
* Added utility function to send viber messages.
* Added support for logging to stdout (used during development).
* Added new internal commands (bot, version).

--- a/config/viber-command-bot.conf
+++ b/config/viber-command-bot.conf
@@ -21,6 +21,7 @@
 #                         default is INFO
 # syslog                - use syslog (True, False); default is True
 # file                  - log to file; default is no file
+# stdout                - log to stdout (True, False); default False
 #
 # Commands for the bot are specified using configuration blocks with sections
 # in a format "Command name". "name" is the command received from the client as
