--- a/config/viber-command-bot.conf
+++ b/config/viber-command-bot.conf
@@ -14,6 +14,7 @@
 # webhook               - webhook URL of the bot
 # notify_user_id        - user id who receives notifications from the bot
 # trusted_user_ids      - list of user ids that are allowed to send messages
+#                         to the bot
 #
 # Configuration block "Logging" specifies logging options:
 #
