Implemented simple viber-receive-message tool
Now it is possible to use command line to follow the messages going to
and from the bot. Redis cache is used.

Refactored to code a bit.

--- a/config/viber-command-bot.conf
+++ b/config/viber-command-bot.conf
@@ -6,7 +6,7 @@
 #
 #   https://developers.viber.com/docs/api/python-bot-api/
 #
-# The configuration options are:
+# The mandatory configuration options are:
 #
 # authentication_token  - authentication token for the public Viber bot account
 # name                  - bot name shown in the message
@@ -15,6 +15,11 @@
 # notify_user_id        - user id who receives notifications from the bot
 # trusted_user_ids      - list of user ids that are allowed to send messages
 #                         to the bot
+#
+# Optional configuration options are:
+#
+# redis_channel         - name of the redis pubsub channel where the messages
+#                         are also sent
 #
 # Configuration block "Logging" specifies logging options:
 #
@@ -43,6 +48,7 @@ avatar = https://example.com/avatar.jpg
 webhook = https://example.com/viber-command-bot
 notify_user_id = viber-public-account-admin-user-id
 trusted_user_ids = viber-public-account-admin-user-id
+redis_channel = viber-command-bot
 
 [Logger]
 level = INFO
