Re-formatted MD text.

--- a/config/viber-command-bot.ini
+++ b/config/viber-command-bot.ini
@@ -14,4 +14,4 @@ die-on-term = true
 mount = /viber-command-bot=viber_command_bot.flask.application:app
 manage-script-name = true
 uid = viber
-gid = nginx
+gid = www-data
