Updated installation instructions for Ubuntu 18.04.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
     "cSpell.words": [
+        "linnakangas",
         "nginx",
         "popd",
         "pushd",
         "setuptools",
         "systemctl",
         "systemd",
+        "tommi",
         "userid",
         "usermod",
         "uwsgi",
