Added configuration entry for redis host

--- a/config/viber-command-bot.conf
+++ b/config/viber-command-bot.conf
@@ -48,6 +48,7 @@ avatar = https://example.com/avatar.jpg
 webhook = https://example.com/viber-command-bot
 notify_user_id = viber-public-account-admin-user-id
 trusted_user_ids = viber-public-account-admin-user-id
+redis_host = localhost
 redis_channel = viber-command-bot
 
 [Logger]
