--- a/config/viber-command-bot.conf
+++ b/config/viber-command-bot.conf
@@ -20,6 +20,8 @@
 #
 # redis_channel         - name of the redis pubsub channel where the messages
 #                         are also sent
+# command_executor      - if set to True, other daemon takes care of the
+#                         received messages through Redis pubsub
 #
 # Configuration block "Logging" specifies logging options:
 #
@@ -50,6 +52,7 @@ notify_user_id = viber-public-account-admin-user-id
 trusted_user_ids = viber-public-account-admin-user-id
 redis_host = localhost
 redis_channel = viber-command-bot
+command_executor = False
 
 [Logger]
 level = INFO
