--- a/config/viber-command-bot.conf
+++ b/config/viber-command-bot.conf
@@ -50,6 +50,7 @@ notify_user_id = viber-public-account-admin-user-id
 trusted_user_ids = viber-public-account-admin-user-id
 redis_host = localhost
 redis_channel = viber-command-bot
+external_responder = False
 
 [Logger]
 level = INFO
