Fixed typo and updated example config

--- a/config/viber-command-bot.conf
+++ b/config/viber-command-bot.conf
@@ -20,6 +20,7 @@
 #
 # redis_channel         - name of the redis pubsub channel where the messages
 #                         are also sent
+# redis_host            - redis host used for message queue
 # command_executor      - if set to True, other daemon takes care of the
 #                         received messages through Redis pubsub
 #
@@ -76,16 +77,16 @@ execute = fortune
 help = Tell a fortune.
 
 [Command ip]
+execute = dig +short myip.opendns.com @resolver1.opendns.com
+help = Show public IP address.
+
+[Command local-ip]
 execute = ip addr show
 help = Show IP addresses.
 
 [Command ps]
 execute = ps -ef
 help = Show process list.
-
-[Command temperature]
-execute = sensors coretemp-isa-0000
-help = Show CPU temperature.
 
 [Command top]
 execute = top -b | head -20
@@ -98,8 +99,3 @@ help = Show server system information.
 [Command uptime]
 execute = uptime
 help = Show server uptime.
-
-[Command webcam]
-execute = webcam.sh
-output_format = json
-help = Take picture using the webcam.
