Enable commands without output

--- a/config/viber-command-bot.conf
+++ b/config/viber-command-bot.conf
@@ -40,7 +40,7 @@
 #                         as a security measure, bot is not able to use any
 #                         information received from the user while executing
 #                         the command
-# output_format         - output format of the command: text (default), json
+# output_format         - output format of the command: text (default), json, none
 # help                  - text to be shown in "/help" command
 #
 
